Fix horizontal scrolling of battle chats

--- a/style/sim.css
+++ b/style/sim.css
@@ -677,6 +677,9 @@ button.closebutton i
 	height: auto;
 	width: auto;
 	background: #edf1f4 url(//play.pokemonshowdown.com/data/meloettabg.png) no-repeat scroll right bottom;
+}
+.battle-log
+{
 	word-wrap: break-word;
 	overflow-x: hidden;
 }
